# game-of-life

./: CMakeLists.txt  gen_tile_types.py
resources/maps/: 1.txt
src/: main.cpp  path_finding.cpp  sf_tile.cpp  tile_dirs.cpp  util.cpp  win.cpp
src/inc/: path_finding.hpp  sf_tile.hpp  sf_tile_engine.hpp  tile_dirs.hpp  tile_map.hpp  tile_type.hpp  util.hpp  win.hpp
